@@ -43,6 +43,7 @@ localedir=@localedir@
 host_type=@host@
 sawfishexecdir=@sawfishexecdir@
 GNOMEDIR=@GNOMEDIR@
+KDEDIR=@KDEDIR@
 
 CC=@CC@
 MAKEDEP=@MAKEDEP@
