@@ -1,3 +1,8 @@
+2009-09-11  Christopher Bratusek <zanghar@freenet.de>
+	* configure.in
+	* Makedefs.in
+	* Makefile.in: check for installation path of sawfish-ksm.desktop via kde4-config
+
 2009-09-08  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/prompt.jl: squashed the last compiler warnings [Matthew Love]
 
